[gd_scene load_steps=3 format=3 uid="uid://cywwxfyd55je2"]

[ext_resource type="Script" uid="uid://urrgpb0vhw2j" path="res://level-components/enemy-path/enemy-path.gd" id="1_ivn3v"]

[sub_resource type="Curve3D" id="Curve3D_ux3rr"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 1.4249238, 0, -1.7499558, 0.22062385, -8.3088875e-05, -0.14665389, -0.22062385, 8.3088875e-05, 0.14665389, -1.5096004, 3.8981438e-05, -1.5741673, -0.20926702, -3.8981438e-05, -0.21182936, 0.20926702, 3.8981438e-05, 0.21182936, -1.6146519, 3.8981438e-05, -0.8913312, -0.19962204, 8.3088875e-05, -0.43290535, 0.19962204, -8.3088875e-05, 0.43290535, 0.5974134, 0, -0.8975346, -0.060892224, 3.8981438e-05, -0.41446555, 0.060892224, -3.8981438e-05, 0.41446555, -0.50577354, 3.8981438e-05, 0.04829773, 0.075473666, -3.8981438e-05, -0.52658355, -0.075473666, 3.8981438e-05, 0.52658355, 1.3676491, 3.8981438e-05, 1.0112716, 0.20426726, 0, -0.5719481, -0.20426726, 0, 0.5719481, -1.6555057, 3.8981438e-05, 1.2680647, 0, 0, 0, 0, 0, 0, -0.8525506, 0, 2.2134197),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 8

[node name="EnemyPath" type="Path3D"]
curve = SubResource("Curve3D_ux3rr")
script = ExtResource("1_ivn3v")
spawn_time = 1

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="."]
use_collision = true
collision_mask = 4
polygon = PackedVector2Array(-0.1, 0, -0.1, 0.01, 0.1, 0.01, 0.1, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 0.05
path_simplify_angle = 0.0
path_rotation = 2
path_rotation_accurate = false
path_local = false
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
